Java Dockerfile with custom runtime