@@ -1,9 +1,14 @@
-FROM quay.io/quarkus/centos-quarkus-maven AS builder
-COPY src /usr/nostos-api/src
-COPY pom.xml /usr/nostos-api
-RUN mvn -f /usr/nostos-api -DskipTests clean package
+FROM quay.io/quarkus/centos-quarkus-maven AS maven
+COPY src /tmp/nostos-api/src
+COPY pom.xml /tmp/nostos-api
+RUN mvn -f /tmp/nostos-api -DskipTests clean package
 
-FROM openjdk:11.0.3-slim
-COPY --from=builder /usr/nostos-api/target/*-runner.jar /nostos-api.jar
+FROM openjdk:11.0.3-slim as jlink
+COPY --from=maven /tmp/nostos-api/target/*-runner.jar /tmp/nostos-api/nostos-api.jar
+RUN jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules $(jdeps --print-module-deps /tmp/nostos-api/nostos-api.jar) --output /tmp/nostos-api/runtime
+
+FROM ubuntu:latest
+COPY --from=jlink /tmp/nostos-api/runtime /opt/nostos-api/runtime
+COPY --from=maven /tmp/nostos-api/target/*-runner.jar /opt/nostos-api/nostos-api.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/nostos-api.jar", "-Dquarkus.http.host=0.0.0.0"]
+ENTRYPOINT ["/opt/nostos-api/runtime/bin/java", "-jar", "/opt/nostos-api/nostos-api.jar", "-Dquarkus.http.host=0.0.0.0"]
